# SMS-GPT

./: .gitignore  README.md  main.py
flask-api/: .env  .gitignore  Dockerfile  README.md  main.py  model.py  pyproject.toml  requirements.txt
test-apk/sms_gateway/: .gitignore  README.md  pubspec.yaml
test-apk/sms_gateway/android/: .gitignore  build.gradle  build_log_2.txt
test-apk/sms_gateway/android/app/: build.gradle
test-apk/sms_gateway/android/app/src/main/: AndroidManifest.xml
test-apk/sms_gateway/android/app/src/main/kotlin/com/smsgateway/sms_gateway/: MainActivity.kt  SmsGatewayService.kt  SmsReceiver.kt  SmsSenderHandler.kt
test-apk/sms_gateway/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
test-apk/sms_gateway/android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
test-apk/sms_gateway/android/gradle/: .gitignore
test-apk/sms_gateway/lib/: main.dart
test-apk/sms_gateway/lib/models/: app_settings.dart  sms_transaction.dart
test-apk/sms_gateway/lib/screens/: dashboard_screen.dart
test-apk/sms_gateway/lib/services/: counter_reset_service.dart  foreground_service.dart  permission_service.dart  sim_service.dart  sms_service.dart  storage_service.dart  webhook_service.dart  xml_parser_service.dart
test-apk/sms_gateway/lib/widgets/: transaction_log_widget.dart
